# customer-support-lab

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/chat/: flow.py  generative.py  local_generation.py  ollama_generation.py  payload.py  persona.py  prompt_builder.py  prompt_loader.py  state.py  summary.py
app/static/: app.js  index.html  styles.css
docs/: architecture.md  aula-1-3-roteiro.md  aula-1-4-roteiro.md  aula-1-5-roteiro.md  aula-1-6-roteiro.md  aula-1-7-roteiro.md  aula-1-8-roteiro.md  aula-2-1-roteiro.md  aula-2-3-roteiro.md  aula-2-5-roteiro.md  aula-2-8-roteiro.md  course-roadmap.md  tts-context.md  workflow-git.md
docs/fotonovela/: biblia-personagens.md
prompts/: task_instruction.md
prompts/intents/: financeiro.md  informacoes_conta.md  suporte_tecnico.md
skills/tlc-spec-driven/: PROJECT-USAGE.md
specs/m02-a08-primeira-evolucao-generativa/: spec.md
specs/m03-a08-contexto-em-camadas/: spec.md
specs/m03-a09-prompts-versionados/: spec.md
specs/m03-a10-prompts-condicionais/: spec.md
tests/: test_chat_flow.py  test_generative_flow.py  test_local_generation.py  test_main_generation_mode.py  test_ollama_generation.py  test_payload.py  test_persona.py  test_prompt_builder.py  test_prompt_loader.py  test_summary.py
