[project]
name = "customer-support-lab"
version = "0.1.0"
description = "Laboratório evolutivo do curso Engenharia de Software na Era dos Agentes — chatbot determinístico → generativo → contextual → multimodal → agentes especializados."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
